# ivcap-sdk-python

./: .gitignore
sdk_client/: Makefile  README.md  config.yml  fix_auto_generated.py  pyproject.toml
sdk_client/docs/: README.md  conf.py  index.md
sdk_client/examples/: list_artifacts.py  list_services.py  order_service.py  upload_artifact.py
sdk_client/src/ivcap_client/: __init__.py  artifact.py  excpetions.py  ivcap.py  metadata.py  order.py  service.py  utils.py
sdk_client/src/ivcap_client/api/artifact/: artifact_add_collection.py  artifact_add_metadata.py  artifact_list.py  artifact_read.py  artifact_upload.py  (+2 more)
sdk_client/src/ivcap_client/client/: __init__.py
sdk_client/src/ivcap_client/models/: __init__.py  add_meta_rt.py  artifact_list_item.py  artifact_list_item_status.py  artifact_list_rt.py  artifact_status_rt.py  artifact_status_rt_status.py  basic_workflow_opts_t.py  create_request_body.py  create_response_body_tiny.py  create_response_body_tiny_2.py  create_response_body_tiny_status.py  described_by_t.py  invalid_parameter_value.py  invalid_scopes_t.py  list_meta_rt.py  metadata_list_item.py  metadata_list_item_rt.py  metadata_record_rt.py  nav_t.py  not_implemented_t.py  order_list_item.py  order_list_item_status.py  order_list_rt.py  order_request_t.py  order_request_t_metadata.py  order_status_rt.py  order_status_rt_metadata.py  order_status_rt_status.py  parameter_def_t.py  parameter_opt_t.py  parameter_t.py  product_t.py  read_meta_rt.py  ref_t.py  reference_t.py  resource_memory_t.py  resource_not_found_t.py  self_t.py  self_with_data_t.py  (+6 more)
(+50 files in other folders)
